--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongodb": "^4.9.0",
+    "nanoid": "^4.0.0",
     "pino": "^8.4.2",
-    "pino-http": "^8.2.0",
-    "uuid": "^8.3.2"
+    "pino-http": "^8.2.0"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.13",
-    "@types/uuid": "^8.3.4",
     "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "npm-run-all": "^4.1.5",
